tests/paczka1/small_fuzzy/55381916.err
Error in line 2: A697 A697 85,5
Error in line 1: TvZW8hoL8 A697 42,7
Error in line 8: KZZApZz3 A596 89,5
Error in line 9: KZZApZz3 S412 23,2
